k8s/accounts.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: accounts-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: accounts
  template:
    metadata:
      labels:
        app: accounts
    spec:
      containers:
        - name: accounts
          # imagePullPolicy: Never
          # image: us.gcr.io/ticketing-dev/auth
          image: xtophe02/devconnector-accounts
          # env:
          #   - name: AUTH_URL
          #     value: 'http://auth-srv:4000/graphql'
          # - name: JWT_KEY
          #   valueFrom:
          #     secretKeyRef:
          #       name: jwt-secret
          #       key: JWT_KEY
---
apiVersion: v1
kind: Service
metadata:
  name: accounts-srv
spec:
  # type: NodePort
  selector:
    app: accounts
  ports:
    - port: 4001
      targetPort: 4001
      protocol: TCP
      name: accounts
      # nodePort: 31515
