k8s/api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          # imagePullPolicy: Never
          # image: us.gcr.io/ticketing-dev/auth
          image: xtophe02/devconnector-api-gateway
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-srv
spec:
  # type: NodePort
  selector:
    app: api-gateway
  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
      name: api-gateway
      # nodePort: 31515
