k8s/auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          # imagePullPolicy: Never
          # image: us.gcr.io/ticketing-dev/auth
          image: xtophe02/devconnector-auth
---
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec:
  # type: NodePort
  selector:
    app: auth
  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
      name: auth
      # nodePort: 31515
