k8s/posts.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          # imagePullPolicy: Never
          # image: us.gcr.io/ticketing-dev/auth
          image: xtophe02/devconnector-posts
---
apiVersion: v1
kind: Service
metadata:
  name: posts-srv
spec:
  # type: NodePort
  selector:
    app: posts
  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
      name: posts
      # nodePort: 31515
