k8s/profiles.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profiles-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: profiles
  template:
    metadata:
      labels:
        app: profiles
    spec:
      containers:
        - name: profiles
          # imagePullPolicy: Never
          # image: us.gcr.io/ticketing-dev/auth
          image: xtophe02/devconnector-profiles
---
apiVersion: v1
kind: Service
metadata:
  name: profiles-srv
spec:
  # type: NodePort
  selector:
    app: profiles
  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
      name: profiles
      # nodePort: 31515
