k8s/users.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
        - name: users
          # imagePullPolicy: Never
          # image: us.gcr.io/ticketing-dev/auth
          image: xtophe02/devconnector-users
---
apiVersion: v1
kind: Service
metadata:
  name: users-srv
spec:
  # type: NodePort
  selector:
    app: users
  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
      name: users
      # nodePort: 31515
