k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: devconnect.dev
      http:
        paths:
          - path: /flyimg/?(.*)
            backend:
              serviceName: flyimg-srv
              servicePort: 80
          - path: /graphql/?(.*)
            backend:
              serviceName: api-gateway-srv
              servicePort: 4000
          - path: /?(.*)
            backend:
              serviceName: client-srv
              servicePort: 3000
